DAY-02/step-01/api/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: 'true'
    kubernetes.io/ingress.class: nginx
  name: api-ingress
spec:
  rules:
    - host: api.mathis-medard.takima.school
      http:
        paths:
          - backend:
              service:
                name: api-service
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - api.mathis-medard.takima.school
      secretName: api-tls
